<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailActivity">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvDetailCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcvPhoto"
                    style="@style/CustomCardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_margin="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:id="@+id/imgBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:minLines="2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/imgFav"
                    app:layout_constraintStart_toStartOf="@+id/mcvPhoto"
                    app:layout_constraintTop_toBottomOf="@+id/mcvPhoto" />

                <ImageView
                    android:id="@+id/imgFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtPercentageRate"
                    app:layout_constraintEnd_toStartOf="@+id/txtPercentageRate"
                    app:layout_constraintTop_toTopOf="@+id/txtPercentageRate"
                    app:srcCompat="@drawable/ic_baseline_favorite_24" />

                <TextView
                    android:id="@+id/txtPercentageRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtName" />

                <TextView
                    android:id="@+id/txtProductionYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="@+id/txtName"
                    app:layout_constraintTop_toBottomOf="@id/txtName" />

                <TextView
                    android:id="@+id/txtTotalVotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtProductionYear"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtProductionYear" />

                <TextView
                    android:id="@+id/txtDurationGenres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toStartOf="@+id/txtAudio"
                    app:layout_constraintStart_toStartOf="@+id/txtName"
                    app:layout_constraintTop_toBottomOf="@id/txtProductionYear" />

                <TextView
                    android:id="@+id/txtAudio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtTotalVotes"
                    app:layout_constraintTop_toTopOf="@+id/txtDurationGenres" />

                <TextView
                    android:id="@+id/txtDescriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="@+id/txtDurationGenres"
                    app:layout_constraintTop_toBottomOf="@+id/txtDurationGenres" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtDurationGenres"
                    app:layout_constraintTop_toBottomOf="@+id/txtDescriptionTitle" />

                <TextView
                    android:id="@+id/txtCastTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/cast"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="@+id/txtDurationGenres"
                    app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

                <TextView
                    android:id="@+id/txtViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtCastTitle"
                    app:layout_constraintEnd_toEndOf="@+id/txtAudio"
                    app:layout_constraintTop_toTopOf="@+id/txtCastTitle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvCast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtCastTitle"
                    tools:listitem="@layout/list_item_recommended" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBookTickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/book_tickets"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mcvDetailCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>